@@ -11,7 +11,12 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.Map;
-import java.util.stream.StreamSupport;
+import org.drivine.manager.PersistenceManager;
+import org.drivine.query.QuerySpecification;
+
+import java.util.List;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * REST controller for retrieving document chunks for visualization.
@@ -20,12 +25,12 @@ import java.util.stream.StreamSupport;
 @RequestMapping("/api/documents/chunks")
 public class DocumentChunkController {
 
-    private final ChunkingContentElementRepository contentRepository;
+    private final PersistenceManager persistenceManager;
     private final BotForgeUserService userService;
 
-    public DocumentChunkController(ChunkingContentElementRepository contentRepository,
+    public DocumentChunkController(PersistenceManager persistenceManager,
             BotForgeUserService userService) {
-        this.contentRepository = contentRepository;
+        this.persistenceManager = persistenceManager;
         this.userService = userService;
     }
 
@@ -37,62 +42,41 @@ public class DocumentChunkController {
         org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(DocumentChunkController.class);
         logger.debug("Retrieving chunks for URI: {}", uri);
 
+        String cypher = """
+                MATCH (c:Chunk)-[:HAS_PARENT*]->(root:ContentElement)
+                WHERE root.uri = $uri OR root.uri = $normalizedUri
+                RETURN c.index as index, c.text as text, properties(c) as props
+                ORDER BY c.index ASC
+                """;
+
         String normalizedTarget = DocumentService.normalizeUri(uri);
 
-        var chunks = StreamSupport.stream(contentRepository.findAll(Chunk.class).spliterator(), false)
-                .filter(chunk -> {
-                    try {
-                        Object parentUriObj = null;
-                        try {
-                            var method = chunk.getClass().getMethod("parentUri");
-                            parentUriObj = method.invoke(chunk);
-                        } catch (Exception e) {
-                            var method = chunk.getClass().getMethod("getParentUri");
-                            parentUriObj = method.invoke(chunk);
-                        }
+        try {
+            List<Map<String, Object>> rows = (List<Map<String, Object>>) (List) persistenceManager.query(
+                    QuerySpecification.<Map>withStatement(cypher)
+                            .bind(Map.of("uri", uri, "normalizedUri", normalizedTarget))
+                            .transform(Map.class));
 
-                        if (parentUriObj == null)
-                            return false;
-                        String parentUri = parentUriObj.toString();
-
-                        boolean match = normalizedTarget.equals(DocumentService.normalizeUri(parentUri));
-                        if (!match && logger.isTraceEnabled()) {
-                            logger.trace("URI mismatch: target={} ({}) vs chunk={} ({})",
-                                    uri, normalizedTarget, parentUri, DocumentService.normalizeUri(parentUri));
-                        }
-                        return match;
-                    } catch (Exception e) {
-                        return false;
-                    }
-                })
-                .map(chunk -> {
-                    try {
+            List<Map<String, Object>> chunks = rows.stream()
+                    .map(row -> {
+                        Map<String, Object> props = (Map<String, Object>) row.get("props");
+                        // try to extract metadata if it exists
+                        Object metadata = props != null ? props.get("metadata") : null;
+                        
                         return Map.of(
-                                "index", invoke(chunk, "index", "getIndex"),
-                                "text", invoke(chunk, "text", "getText", "getContent"),
-                                "metadata", invoke(chunk, "metadata", "getMetadata"));
-                    } catch (Exception e) {
-                        return Map.of("error", e.getMessage());
-                    }
-                })
-                .toList();
+                                "index", row.get("index") != null ? row.get("index") : 0,
+                                "text", row.get("text") != null ? row.get("text") : "",
+                                "metadata", metadata != null ? metadata : Map.of()
+                        );
+                    })
+                    .collect(Collectors.toList());
 
-        logger.info("Found {} chunks for URI: {} (Normalized: {})", chunks.size(), uri, normalizedTarget);
-        return ResponseEntity.ok(Map.of("uri", uri, "chunks", chunks));
-    }
-
-    private String normalizeUri(String uri) {
-        return DocumentService.normalizeUri(uri);
-    }
-
-    private Object invoke(Object obj, String... methodNames) {
-        for (String name : methodNames) {
-            try {
-                return obj.getClass().getMethod(name).invoke(obj);
-            } catch (Exception e) {
-                // try next
-            }
+            logger.info("Found {} chunks for URI: {} (Normalized: {})", chunks.size(), uri, normalizedTarget);
+            return ResponseEntity.ok(Map.of("uri", uri, "chunks", chunks));
+            
+        } catch (Exception e) {
+            logger.error("Error retrieving chunks for URI: " + uri, e);
+            return ResponseEntity.internalServerError().body(Map.of("error", e.getMessage()));
         }
-        return null;
     }
 }
